# oauth2-lib

./: .bumpversion.cfg  .bumversion.cfg  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  fmt_code.sh  mypy.ini  pyproject.toml  setup.cfg  setup.py
.github/workflows/: scheduled-build.yml  test-package.yml
oauth/: oauth_client.py  oauth_credentials.py  oauth_filter.py
oauth2_lib/: __init__.py  access_control.py  api_client.py  async_api_client.py  fastapi.py  graphql_auth.py  graphql_authentication.py  oauth_client.py  oauth_credentials.py  oauth_filter.py  openid_bearer.py  settings.py  strawberry.py
requirements/: base.txt  dev.txt  test.txt
tests/: conftest.py  test_async_api_client.py  test_fastapi.py  test_oauth_client.py  test_oauth_credentials.py  test_oauth_filter.py  test_opa_decision.py  test_opa_graphql_decision.py  test_openid_bearer.py  utils.py
tests/graphql/: conftest.py  test_authenticated_federated_field.py  test_authenticated_field.py  test_authenticated_mutation_field.py
tests/oauth/: test_oauth_client.py  test_oauth_credentials.py  test_oauth_filter.py  test_oauth_filter_without_app.py
tests/regressions/: __init__.py  scoping_issue_nw_dashboard_sec_def.yaml  test_scoping_issue_nw_dashboard_issue_2.py
tests/strawberry/: conftest.py  test_authenticated_federated_field.py  test_authenticated_field.py  test_authenticated_mutation_field.py
