[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "oauth2_lib"
dist-name = "oauth2-lib"
author = "SURF"
author-email = "automation-beheer@surf.nl"
home-page = "https://github.com/workfloworchestrator/oauth2-lib"
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Typing :: Typed",
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Intended Audience :: Telecommunications Industry",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
requires = [
    "requests>=2.19.0",
    "ruamel.yaml~=0.16.10",
    "structlog>=20.2.0",
    "fastapi>=0.65.1",
    "httpx~=0.18.1",
    "authlib>=0.15.2",
    "pydantic>=1.8.0",
    "opentelemetry-api~=1.9.1",
    "opentelemetry-instrumentation~=0.28b1",
]
description-file = "README.md"
requires-python = ">3.8"

[tool.flit.metadata.urls]
Documentation = "https://workfloworchestrator.org/"

[tool.flit.metadata.requires-extra]
test = [
    "apache-license-check",
    "black",
    "flake8",
    "flake8-bandit>=3.0.0",
    "flake8-bugbear",
    "flake8-comprehensions",
    "flake8-docstrings",
    "flake8-junit-report",
    "flake8-logging-format",
    "flake8-pep3101",
    "flake8-print",
    "flake8-rst",
    "flake8-rst-docstrings",
    "flake8-tidy-imports",
    "isort",
    "mypy",
    "pygments",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-xdist",
    "requests_mock",
]
dev = ["bumpversion", "pre-commit"]

[tool.isort]
profile = "black"
line_length = 120
skip = ["src", "venv"]

[tool.black]
line-length = 120
target-version = ["py39"]
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | venv
    | src
  )/
)
'''


[tool.nitpick]
style="github://workfloworchestrator/nitpick-style@main/nitpick-style.toml"
